# ChessProjects

./: .gitignore  chessdata.py  parser.py  parser_try2.py  pyproject.toml
openings/: openingbook.py
openings/base/: .~lock.a.tsv#
src/: __main__.py  analysis.pkl  analyzedgame.py  engineanalyzer.py  opening_book.pkl  player.py  player_stats.py  worker.py
src/chessprograms/: analyzedgame.py  engineanalyzer.py  enums.py  main.py  player.py  player_stats.py
src/chessprograms/openings/: opening_book.pkl  openingbook.py
src/chessprograms/utils/: Config.py  EngineStrategies.py  math_stat.py  moveanalysis.py  stopwatch.py
tests/: test_math_stats.py
utils/: Config.py  EngineStrategies.py  math_stat.py  moveanalysis.py
